--- a/tasksys/requirements.txt
+++ b/tasksys/requirements.txt
@@ -1,7 +1,13 @@
+amqp==5.1.1
 asgiref==3.2.10
+billiard==3.6.4.0
+celery==5.0.0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.2
+click-didyoumean==0.3.0
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.2
@@ -18,17 +24,22 @@ djoser==2.1.0
 idna==3.3
 itypes==1.2.0
 Jinja2==3.1.1
+kombu==5.2.4
 MarkupSafe==2.1.1
 oauthlib==3.2.0
+prompt-toolkit==3.0.29
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+redis==3.5.3
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
+vine==5.0.0
+wcwidth==0.2.5
