--- a/tasksys/Dockerfile
+++ b/tasksys/Dockerfile
@@ -7,12 +7,9 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
+COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
 COPY . .
 RUN chmod +x prestart.sh
 ENTRYPOINT ["bash", "prestart.sh"]
-#
-#EXPOSE 8000
-#CMD python manage.py runserver 0.0.0.0:8000
