--- a/tasksys/requirements.txt
+++ b/tasksys/requirements.txt
@@ -25,7 +25,9 @@ django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+drf-yasg==1.20.0
 idna==3.3
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.1
 kombu==5.2.4
@@ -42,6 +44,8 @@ pytz==2022.1
 redis==4.3.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
 six==1.16.0
 social-auth-app-django==4.0.0
@@ -52,3 +56,4 @@ urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
+psycopg2-binary==2.9.1
