--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: task_db
+    - POSTGRES_USER=user
+    - POSTGRES_PASSWORD=password
+    - POSTGRES_DB=task_db
     volumes:
       - pg-data:/var/lib/postgresql/data/
 
@@ -24,8 +24,14 @@ services:
       - DEBUG=1
       - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - DB_HOST=pg
+      - DB_NAME=task_db
+      - DB_USER=user
+      - DB_PASS=password
     depends_on:
       - redis
+      - web
+      - pg
 
   celery-beat:
     build: ./tasksys
@@ -36,8 +42,14 @@ services:
       - DEBUG=1
       - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - DB_HOST=pg
+      - DB_NAME=task_db
+      - DB_USER=user
+      - DB_PASS=password
     depends_on:
       - redis
+      - pg
+      - web
 
   web:
     build: ./tasksys
@@ -48,6 +60,10 @@ services:
       - '8000:8000'
     environment:
       - DEBUG=1
+      - DB_HOST=pg
+      - DB_NAME=task_db
+      - DB_USER=user
+      - DB_PASS=password
       - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
     depends_on:
